web3/src/css/Proposal.css
.proposal {
	display: flex;
	flex-wrap: wrap;
	justify-content: center;
    margin-bottom: 60px;
}

.all-content {
	display: flex;
	flex-wrap: wrap;
	justify-content: center;
    margin-bottom: 60px;
}
.proposal .wrapper {
	width: 30%;
	min-width: 400px;
	margin-top: 60px;
	
}
.proposal .header {


	
	display: flex;

	background-color: #fff;
	flex-direction: column;
	border-radius: 10px;
	padding: 20px;
}

.proposal .description{
	width: 100%;
	display:flex;
	flex-direction: column;
	flex-wrap: wrap;
	white-space: pre-line;
	
}

pre{
	background-color: #f0f0f0;
	padding: 10px;
	border-radius: 10px;
	white-space: pre-wrap;
	word-break: break-all;
}
.proposal .description p{
	width: 100%;
	margin-top: 20px;
	word-wrap: break-word
}
.proposal .line {
	display: flex;
	flex-wrap: wrap;
	align-items: center;
}

.proposal .image-block {
	margin-right: 20px;
	display: flex;
	align-items: center;
	justify-content: center;
	width: 60px;
	height: 60px;
	border-radius: 10px;
	background-color: #ececec;
	overflow: hidden;
}
.proposal .info {
	display: flex;
	flex-direction: column;
	justify-content: center;

}
.proposal .image-block img {
	height: 90px;
	width: 90px;
}

.proposal .info .name {
	font-size: 20px;
	font-weight: 700;
	color: rgb(41, 41, 41);
}

.proposal .info .address {
	font-size: 14px;
}

.block {


	margin-top: 20px;
	padding: 20px;
	background-color: #fff;
	border-radius: 10px;
}

.proposal .name {
	font-size: 24px;
	font-weight: 700;
	margin-bottom: 10px;
}

.proposal .vote-header {
	display: flex;
	justify-content: space-between;
}
.proposal .vote-title {
	width: 50%;
	font-weight: 700;
}

.proposal .credits {
	width: 50%;
	display: flex;
	justify-content: flex-end;
	gap: 20px;
}

.proposal .credits-value {
	font-weight: 700;
	color: #3191ff;
}

hr.solid {
	margin-top: 20px;
	margin-bottom: 20px;
	border-top: 1px solid #bbb;
}

.proposal .vote-option {
	display: flex;
	justify-content: space-between;
	border-radius: 10px;
	padding: 10px;
	background-color: #f8f8f8;
	margin-bottom: 20px;
}

.vote-button {
	display: flex;
	gap: 2px;

}
.vote-button .more {
	border-top-right-radius: 10px;
	border-bottom-right-radius: 10px;
	background-color: #e7e7e7;
	width: 24px;
	height: 24px;
	text-align: center;
	-moz-user-select: none;
	-khtml-user-select: none;
	-webkit-user-select: none;
	-ms-user-select: none;
	user-select: none;
	cursor: pointer;
}
.vote-button .quantity {
	background-color: #e7e7e7;
	text-align: center;
	width: 48px;
	height: 24px;
	-moz-user-select: none;
	-khtml-user-select: none;
	-webkit-user-select: none;
	-ms-user-select: none;
	user-select: none;
}
.vote-button .less {
	border-top-left-radius: 10px;
	border-bottom-left-radius: 10px;
	background-color: #e7e7e7;
	width: 24px;
	height: 24px;
	text-align: center;
	-moz-user-select: none;
	-khtml-user-select: none;
	-webkit-user-select: none;
	-ms-user-select: none;
	user-select: none;
	cursor: pointer;
}

.proposal .author{
	color:#3191ff;
}
.proposal a{
    text-decoration:none
}
.proposal .send-vote {
	margin-top: 20px;
	width: 100%;
	height: 40px;
	padding: 10px;
	border-radius: 10px;
	border: none;
	background-color: #3191ff;
	color: #fff;
	font-size: 20px;
	font-weight: 700;
    align-content: center;
    justify-content: center;
	line-height: 0px;
    text-align: center;
	cursor: pointer;


	-moz-user-select: -moz-none;
	-khtml-user-select: none;
	-webkit-user-select: none;
	-o-user-select: none;
	user-select: none;
}

.proposal .send-vote-disabled {

    margin-top: 20px;
	width: 100%;
	height: 40px;
	padding: 10px;
	border-radius: 10px;
	border: none;
	background-color: #8a8a8a;
	color: #fff;
	font-size: 20px;
	font-weight: 700;
    align-content: center;
    justify-content: center;
	line-height: 0px;
    text-align: center;


	-moz-user-select: -moz-none;
	-khtml-user-select: none;
	-webkit-user-select: none;
	-o-user-select: none;
	user-select: none;

}

.proposal .block-2{
	display: flex;
	flex-direction: column;
}
.proposal .info-block{
	display: flex;
	flex-direction: column;
	min-width: 300px;
    width: 15%;

    padding-bottom: 20px;
    margin-top: 120px;
    margin-left: 60px;
    background-color: #fff;
    border-radius: 10px;
}
@media only screen and (max-width: 600px) {
	.proposal .info-block {
		margin-top: 60px;
		margin-left: 0px;
		min-width: 400px;
	}
}

.proposal .info-block-2{
	display: flex;
	flex-direction: column;
	min-width: 300px;
    width: 15%;
	height: 100%;
	max-height: 250px;
    padding-bottom: 20px;
	margin-top: 20px;
    margin-left: 60px;
    background-color: #fff;
    border-radius: 10px;
}
@media only screen and (max-width: 600px) {
	.proposal .info-block-2 {
		margin-top: 60px;
		margin-left: 0px;
		min-width: 400px;
	}
}

.proposal .info-header{
    margin-top: 20px;
    display: flex;
    flex-direction: column;
    align-items: center;
}

.proposal .info-header .title{
    font-size: 20px;
}


hr.solid-80 {
    width: 90%;
	margin-top: 20px;
	margin-bottom: 20px;
	border-top: 1px solid rgb(36, 28, 28);
}

hr.solid-80-2 {
    width: 80%;
	margin-top: 5px;
	margin-bottom: 5px;
	border-top: 1px solid rgba(49, 49, 49, 0.199);
}

.proposal .info-block .line{
    display: flex;
    margin-left: 20px;
    margin-right: 20px;
    justify-content: space-between;
    font-size: 14px;
    margin-top: 12px;
}

.proposal .info-header-2 {
    margin-top: 60px;
    display: flex;
    flex-direction: column;
    align-items: center;
    align-content: center;
}

.proposal .info-header-2 .title{
    font-size: 20px;
}

.proposal .vote-status-header{
    
    display: flex;
    margin-left: 20px;
    margin-right: 20px;
    justify-content: space-between;
    font-weight: 700;
}

.proposal .vote-status-match{
    
    display: flex;
	flex-direction: column;
    margin-left: 20px;
    margin-right: 20px;
    justify-content: space-between;
}

.proposal .vote-status .progress-bar{
    border-radius: 10px;
    margin-left: 20px;
    margin-right: 20px;
    background-color: #E5E5E5;
    margin-bottom: 20px;
    height: 10px;
}

.proposal .vote-status .progress-bar-status{
    width: 0%;
    border-radius: 10px;
    background-color: #10D654;
    margin-bottom: 20px;
    height: 10px;
}

.proposal .sender{
	max-width: 135px;
	white-space: nowrap;
	overflow: hidden;
	text-overflow: ellipsis;
}

.proposal .warning{
	font-size: 12px;
	color: #8a8a8a;
	font-style: italic;
}

.proposal .back-button{
	display: flex;
	align-items: center;
	justify-content: center;
	gap: 8px;
	width: 120px;
	height: 40px;
	background-color: #3191ff;
	border-radius: 10px;
	box-shadow: 5px 10px 20px 0px rgba(0, 0, 0, 0.2);
	font-weight: 700;
	color: #fff;
	margin-bottom: 20px;
	cursor: pointer;
	user-select: none;
}
.proposal .back-button img{
	width: 15px;
	height: 15px;
}

hr.solid-80-3 {
    width: 70%;
	border-top: 1px solid rgba(49, 49, 49, 0.199);
}

.proposal .info-header-voters{
    margin-top: 20px;
    display: flex;
    flex-direction: column;
    align-items: center;
}

.proposal .voters-line{
	height: 180px;
	overflow: auto;
	margin-right: 20px;
	margin-left: 20px;

    display: flex;
    flex-direction: column;
    align-items: center;
}

.proposal .info-header-voters .title{
    font-size: 20px;
	margin-bottom: 10px;
}

